myTestOutput/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Acceptances__c</fullName>
        <label>Acceptances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Units_Available__c</fullName>
        <formula>Original_Units_Available__c-Acceptances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is a description of the offer (ie. 
Organic Strawberries)</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Units_Available__c</fullName>
        <label>Original Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Through__c</fullName>
        <label>Valid Through</label>
        <type>Date</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Acceptances__c</columns>
        <columns>Valid_Through__c</columns>
        <columns>Original_Units_Available__c</columns>
        <columns>Current_Units_Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OFF-{000000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>